# skyrim_immersive_spell_dest_study_icon

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
assets/interface/: immSpellLearningIcon.swf
config/: imm_spell_learning_icon.json
include/: PapyrusBridge.h
scripts/: build.ps1  configure.ps1  deploy.ps1  run-with-vsdevcmd.ps1
scripts/source/: DIII_SpellLearningBridge.psc
src/: PapyrusBridge.cpp  main.cpp
